--- a/frontend/src/assets/pages/home/test.html
+++ b/frontend/src/assets/pages/home/test.html
@@ -3,151 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We Move The Kids</title>
+    <title>Information Boxes</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* General styles */
-        body {
-            background-color: #ffffff;
-            font-family: 'Arial', sans-serif;
-            color: #333;
+        .info-box{
+            border-radius: 10px !important;
+            overflow: hidden;
         }
-
-        .main-container {
-            margin-top: 50px;
-        }
-
-        .tagline {
-            background-color: #f5f5f5;
-            color: #555;
-            padding: 6px 12px;
-            border-radius: 15px;
-            display: inline-block;
-            font-size: 0.9rem;
+        .info-box h5 {
             font-weight: bold;
+            margin-bottom: 10px;
+            padding: 20px 10px;
+        }
+        .info-box p{
+            padding: 10px;
+            padding-top: 0 !important;
+            margin-bottom: 0 !important;
+        }
+        .date h5{
+            background-color: #28a745;
+        }
+        .info-box.point-system h5{
+            background-color: #007bff;
+        }
+        .info-box.info-box.disciplines h5{
+            background-color: #dc3545;
         }
 
-        .title {
-            font-size: 3.5rem;
-            font-weight: bold;
-            line-height: 1.2;
-        }
 
-        .title span {
-            color: red;
-            font-weight: bold;
+        .info-box.date {
+            background-color: #d4edda; /* Greenish background */
         }
-
-        .description {
-            font-size: 1.1rem;
-            color: #555;
-            margin: 20px 0;
+        .info-box.point-system {
+            background-color: #cce5ff; /* Light blue background */
         }
-
-        /* Button styles */
-        .btn-custom {
-            background-color: #ff2b2b;
-            color: #fff;
-            border-radius: 30px;
-            padding: 10px 25px;
-            font-weight: bold;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-            border: none;
-            transition: all 0.3s;
+        .info-box.disciplines {
+            background-color: #f8d7da; /* Light red background */
         }
-
-        .btn-custom:hover {
-            background-color: #d12222;
-            color: #fff;
-        }
-
-        /* Image and Decorations */
-        .image-container {
-            position: relative;
+        .container-boxes {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 30px;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 20px;
         }
-
-        .rounded-img {
-            border-radius: 20px;
-            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .img-small {
-            width: 200px;
-            height: auto;
-        }
-
-        .img-large {
-            width: 260px;
-            height: auto;
-        }
-
-        .decor-star {
-            position: absolute;
-            top: 10%;
-            left: 40%;
-            font-size: 2.5rem;
-            color: #1e90ff;
-        }
-
-        .decor-trophy {
-            position: absolute;
-            bottom: 5%;
-            right: 5%;
-            font-size: 2.5rem;
-            color: #ff9800;
-        }
-
-        .decor-award {
-            position: absolute;
-            top: 0;
-            right: 0;
-            font-size: 2.5rem;
-            color: #e67e22;
+        @media (max-width: 768px) {
+            .container-boxes {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container main-container">
-        <div class="row align-items-center">
-            <!-- Left Side Content -->
-            <div class="col-lg-6 col-md-12">
-                <div class="tagline">#WEMOVETHEKIDS</div>
-                <h1 class="title mt-3">
-                    Running <span>*</span> Jumping <br> Throwing
-                </h1>
-                <p class="description">
-                    The Athletics Kids Cup moves the kids! The three basic movement forms that are required in almost every sport are the basis of this unique sports initiative in India. Let's move the children together and encourage their personal development.
+    <div class="container mt-5">
+        <div class="container-boxes">
+            <div class="info-box date col-md-4">
+                <h5>Date</h5>
+                <p>
+                    The Athletics Kids Cup season begins on 16 September 2024, from which date competitions can be held. All competitions held up to and including 10 December 2024 are part of the qualification period for the Regional Finals. Your school is free to organise an Athletics Kids Cup after 10 December. Of course, you will still receive our full support.
                 </p>
-                <button class="btn btn-custom">Pre-register your school →</button>
             </div>
-
-            <!-- Right Side Content -->
-            <div class="col-lg-6 col-md-12">
-                <div class="image-container">
-                    <!-- Top Image -->
-                    <img src="https://via.placeholder.com/200x300.png?text=Running" alt="Running" class="rounded-img img-small">
-                    
-                    <!-- Middle Image -->
-                    <img src="https://via.placeholder.com/300x300.png?text=Jumping" alt="Jumping" class="rounded-img img-large ms-4">
-                    <div class="decor-award">🏅</div>
-
-                    <!-- Bottom Image -->
-                    <img src="https://via.placeholder.com/250x300.png?text=Throwing" alt="Throwing" class="rounded-img img-small mt-4">
-                    
-                    <!-- Decorations -->
-                    <div class="decor-star">⭐</div>
-                    <div class="decor-trophy">🏆</div>
-                </div>
+            <div class="info-box point-system col-md-4">
+                <h5>Point system</h5>
+                <p>
+                    For the evaluation of the individual performances, a predefined points table is used. The points for the three individual disciplines are added to the triathlon result. Only the total of all three disciplines counts towards the ranking.
+                </p>
+            </div>
+            <div class="info-box disciplines col-md-4">
+                <h5>Disciplines</h5>
+                <p>
+                    The Athletics Kids Cup is a triathlon consisting of the following disciplines:
+                </p>
+                <ul>
+                    <li>Sprint 60 m – 1 attempt</li>
+                    <li>Long jump with zone jump – 3 attempts</li>
+                    <li>Ball throw 200 g – 3 attempts</li>
+                </ul>
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
